vlib/v/checker/tests/assign_expr_type_err_c.out
vlib/v/checker/tests/assign_expr_type_err_c.vv:3:2: error: operator *= not defined on left operand type `string`
    1 | fn main() {
    2 |     mut foo := 'hello'
    3 |     foo *= 10
      |     ~~~
    4 |     _ = foo
    5 | }
vlib/v/checker/tests/assign_expr_type_err_c.vv:3:9: error: cannot assign to `foo`: expected `string`, not `int literal`
    1 | fn main() {
    2 |     mut foo := 'hello'
    3 |     foo *= 10
      |            ~~
    4 |     _ = foo
    5 | }
